Review Request 12131 - tweaked More Info icon to better display - fixed margin/padding issues for datacloud subheader tabs - login text overflow fix for large tenant names - added tooltip to tenants list tenants

--- a/le-ui/projects/common/assets/sass/_tabs.scss
+++ b/le-ui/projects/common/assets/sass/_tabs.scss
@@ -273,7 +273,7 @@ Chunky Interior Tabs (My Data, Play List, etc...)
                 color: white;
             }
             .more-info {
-                padding: 0;
+                padding: 1px;
                 text-align: center;
                 width: 12px;
                 height: 12px;
